# JpDrawApplication

./: .gitignore  CMakeLists.txt  ImageSource.txt  LICENSE  README.md
include/: DrawArea.hpp  DrawLayer.hpp  ImageProcessMethods.hpp  LineMethods.hpp  Log.hpp  ProcessLayer.hpp  SampleHeaderFile.hpp  TestCases_LineMethods.hpp  TestCases_Techniques.hpp  mainwindow.hpp
resource/: kNNDictionary.txt
source/: DrawArea.cpp  DrawLayer.cpp  ImageProcessMethods.cpp  LineMethods.cpp  ProcessLayer.cpp  main.cpp  mainwindow.cpp  mainwindow.ui
